--- a/public/assets/css/modal.css
+++ b/public/assets/css/modal.css
@@ -31,6 +31,12 @@
 	z-index:999;
 	display:none;
 }
+/* 閉じるボタン */
+#modal-close{
+	position: absolute;
+	bottom:0;
+	left:0;
+}
 
 /* aタグにカーソルが乗ったら指に変える */
 a:hover{
